<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- urban airship -->
    <!-- <string name="gcmSender">400375101132</string>
    <string name="developmentAppKey">YmOWEA0lR7aW77MI2u-SAQ</string>
    <string name="developmentAppSecret">gL0ScP2vSAGohDRfZjHDeA</string>
    <string name="productionAppKey">YmOWEA0lR7aW77MI2u-SAQ</string>
    <string name="productionAppSecret">gL0ScP2vSAGohDRfZjHDeA</string> -->

    <string name="font_semibold">OpenSans-Semibold.ttf</string>
    <string name="font_bold">OpenSans-Bold.ttf</string>
    <string name="font_extrabold">OpenSans-ExtraBold.ttf</string>
    <string name="font_extraBoldItalic">OpenSans-ExtraBoldItalic.ttf</string>
    <string name="font_italic">OpenSans-Italic.ttf</string>
    <string name="font_light">OpenSans-Light.ttf</string>
    <string name="font_lightItalic">OpenSans-LightItalic.ttf</string>
    <string name="font_regular">OpenSans-Regular.ttf</string>
    <string name="font_semibolditalic">OpenSans-SemiboldItalic.ttf</string>
    <string name="login_3mins">Snap a photo to start \nselling in 3 mins !</string>
    <string name="login_bestdeal">Find the best deals in town</string>
    <string name="login_bestdeal_sub">\nGet the best value shopping in town from \nreviewed sellers all from your phone. </string>
    <string name="login_chatapp">Buy with private chat in app </string>
    <string name="login_chatapp_sub">\nBuy securely with an in app chat \nthat protects your identity.</string>
    <string name="home_list">List</string>
    <string name="profile_list">Listings</string>
    <string name="home_thumbnail">Thumbnails</string>
    <string name="browse">Everything</string>
    <string name="navigation_mylisting">My Listings</string>
    <string name="navigation_offer">Offer I made</string>
    <string name="navigation_like">Stuff I liked</string>
    <string name="navigation_share_friends">Share with your friends</string>
    <string name="app_name">3 mins</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- <string name="app_id">580806171975545</string> -->
    <string name="activity_login_btn_login_gg"></string>
    <string name="please_wait">Please wait</string>
    <string name="loading_image">Loading image...</string>
    <string name="location">Location</string>
    <string name="currency">k Vnd</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="edit">Edit</string>
    <string name="my_likes">My Likes</string>
    <string name="my_items">My Items</string>
    <string name="feedback">Positive</string>

    <!-- action bar -->
    <string name="action_bar_search_title">Search</string>
    
    <!-- login activity -->
    <string name="activity_login_fail_dialog_title">Authorization failed!</string>
    <string name="activity_login_fail_dialog_message">User is not authorized. Please try again!</string>
    <string name="activity_login_fail_dialog_btn_ok">OK</string>

    <!-- activity_imageview.xml -->
    <string name="activity_imageview_category">Category</string>
    <string name="activity_imageview_item">Item</string>
    <string name="activity_imageview_price">Price</string>
    <string name="activity_imageview_location">Location</string>
    <string name="activity_imageview_share_on_facebook">Share on facebook</string>
    <string name="activity_imageview_take_a_photo">Take a photo</string>
    <string name="activity_imageview_select_from_gallery">Select from Gallery</string>
    <string name="activity_imageview_delete">Delete</string>
    <string name="activity_imageview_add_photo">Add photo...</string>
    <string name="activity_imageview_category_hint">Books</string>
    <string name="activity_imageview_item_hint">What are you selling?</string>
    <string name="activity_imageview_price_hint">Set a price</string>
    <string name="activity_imageview_et_description_hint">Enter product description</string>
    <string name="activity_imageview_action_submit_title">Submit</string>
    <string name="activity_imageview_action_cancel_title">Cancel</string>
    
    <string name="activity_imageview_facebook_dialog_title">Login Facebook</string>
    <string name="activity_imageview_facebook_dialog_message">Please login Facebook and try again.</string>
    <string name="activity_imageview_facebook_dialog_btn_ok">OK</string>
    <string name="activity_imageview_facebook_dialog_btn_cancel">Cancel</string>
    <string name="activity_imageview_facebook_caption_name">Name:</string>
    <string name="activity_imageview_facebook_caption_price">\nPrice:</string>
    <string name="activity_imageview_facebook_caption_description">\nDescription:</string>
    <string name="activity_imageview_facebook_post_successfully">Shared on Facebook.</string>
    
    <string name="error_empty_image">Please enter at least one image</string>
    <string name="error_miss_field">Please enter all require field</string>
    <string name="error_upload">Fail to upload product</string>
    
    <!-- <string name="google_map_API">AIzaSyA7LzP742pWpP0Vfmkf0GVwT22-gUzL7Nc</string> -->
    <!-- <string name="google_map_API">AIzaSyDR-68JhnBJIhH9jh3ErQbW_6Vbsj93ObA</string> -->
    
    <string name="title_activity_detail">DetailActivity</string>
    <string name="camera_filter">Filters</string>
    <string name="camera_album">Album</string>

    <!-- no items -->
    <string name="no_items_line_1">Tap on the icon below</string>
    <string name="no_items_line_2">to start listing yours items for sell</string>

    <!-- chat to buy -->
    <string name="activity_chat_price_label">Listed Price</string>
    <string name="activity_chat_price_offered_label">Price Offered</string>
    <string name="activity_chat_chat_input_hint">Type message here to chat</string>
    <string name="activity_chat_chat_content_label">Chat privately with</string>
    <string name="activity_chat_empty_message">Message is empty!</string>
    <string name="profile_liked">Liked</string>
    <string name="profile_message">Messages</string>
    <string name="profile_mylist">My Listings</string>
    <string name="mylike">My likes</string>
    <string name="postOffer_your_offer">Your offer</string>
    <string name="postoffer_start_chatting">Make an offer to start chatting</string>
    <string name="postoffer_tap_to_change">tap to change</string>
    <string formatted="false" name="postoffer_title">%s is selling it for %sk Vnd</string>
    <string name="activity_chat_no_more_older_messages">There are no older messages</string>
    
    <!-- fragment filter -->
    <string name="fm_filter_search_hint">Search for products</string>
    <string name="fm_filter_sort_by">SORT BY</string>
    <string name="fm_filter_popular">Popular</string>
    <string name="fm_filter_recent">Recent</string>
    <string name="fm_filter_lowest">Lowest Price</string>
    <string name="fm_filter_highest">Highest Price</string>
    <string name="fm_filter_nearest">Nearest</string>
    <string name="fm_filter_price_range">PRICE RANGE</string>
    <string name="fm_filter_min">Minimum</string>
    <string name="fm_filter_max">Maximum</string>
    
    <string name="offer">Offers</string>
    
    <!-- activity user activity -->
    <string name="activity_title">Activity</string>
    
    <!-- activity setting -->
    <string name="act_setting_label">Settings</string>
    <string name="about">About 3mins</string>
    <string name="send_suggestions">Send us your suggestions</string>
    <string name="rate">Rate us on Appstore</string>
    <string name="share_label">Recommend to friends</string>
    <string name="log_out">Log out</string>
    
    <!-- activity crop image -->
    <string name="act_crop_img_crop">Crop</string>
    
    <!-- activity about -->
    <string name="activity_about_title">About</string>
    
    <!-- activity follow -->
    <string name="activity_follow_title">Follow</string>
    
    <!-- dialog share on facebook -->
    <string name="dialog_share_fb_question">What is on your mind?</string>
    <string name="dialog_share_fb_hint">I am putting this on my birthday wishlist</string>
    <string name="dialog_share_fb_title">Share on Facebook</string>
    <string name="dialog_share_fb_post">Post</string>
    <string name="dialog_share_fb_cancel">Cancel</string>
    
    <!-- fragment detail -->
    <string name="fm_detail_1_person_liked"> person liked this</string>
    <string name="fm_detail_many_people_liked"> people liked this</string>
    <string name="fm_detail_view_1_offer">View 1 offer</string>
    <string name="fm_detail_view_many_offers">View %s offers</string>
    <string name="fm_detail_view_all_comment">View all comments</string>
    <string name="liked">Liked</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    
    <!-- common util -->
    <string name="facebook_app_missed_error">Please install Facebook for Android to share easier!</string>
    <string name="share_three_min_info">Hi Guys, Try this app https://play.google.com/store/apps/details?id=com.threemins</string>
    <string name="cannot_load_image_error">Can not load the original images of this product to share.\nUse the medium image instead</string>
    
    <string name="text_test">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed dorem ipsum dolor sit amet, consectetur adipisicing elit, sed dorem ipsum dolor sit amet, consectetur adipisicing elit, sed dorem ipsum dolor sit amet, consectetur adipisicing elit, sed d</string>

    <!-- fragment right -->
    <string name="fm_right_view_1_feedback">View 1 feedback</string>
    <string name="fm_right_view_many_feedbacks">View %s feedbacks</string>
    
    <!-- comment activity -->
    <string name="act_comment_label">Comments</string>
    <string name="fm_comment_input_hint">Add a comment...</string>
    
    <!-- feedback activity -->
    <string name="act_feedback_label">Feedback</string>
    <string name="act_feedback_question">Are you satisfied with this item purchased?</string>
    <string name="act_feedback_option_not_satisfied">Not satisfied</string>
    <string name="act_feedback_option_no_comment">No comment</string>
    <string name="act_feedback_option_i_am_satisfied">I am satisfied</string>
    <string name="act_feedback_hint">If not satisfied, you can leave your comment.</string>
    <string name="act_feedback_empty_feedback_warning">If you are not satisfied, please leave your feedback.</string>
    <string name="act_feedback_sent_successfully">Your feedback is sent.</string>
    <string name="act_feedback_sent_fail">Something is wrong. Please try again.</string>
    
    <!-- header feedback -->
    <string name="header_feedback_view_all_feedbacks">View all feedbacks</string>
</resources>